Added bullets pool demonstration, downloaded some updated code for managers, added score and upgrade managers and also GameLogicManager & loader. Started to add some code for screens (interface namespace)

--- a/Assets/_HOG/Scripts/Interface/HOG.Interface.asmdef
+++ b/Assets/_HOG/Scripts/Interface/HOG.Interface.asmdef
@@ -1,7 +1,9 @@
 {
-    "name": "HOG.Core",
+    "name": "HOG.Interface",
     "rootNamespace": "",
-    "references": [],
+    "references": [
+        "GUID:d79cdf23c9a884a4aae6dfb9b7e1570c"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
