--- a/Assets/_HOG/Scripts/UI/HOG.UI.asmdef
+++ b/Assets/_HOG/Scripts/UI/HOG.UI.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "HOG.Interface",
+    "name": "HOG.UI",
     "rootNamespace": "",
     "references": [
         "GUID:d79cdf23c9a884a4aae6dfb9b7e1570c"
