--- a/Assets/_HOG/Scripts/UI/HOG.UI.asmdef
+++ b/Assets/_HOG/Scripts/UI/HOG.UI.asmdef
@@ -2,7 +2,8 @@
     "name": "HOG.UI",
     "rootNamespace": "",
     "references": [
-        "GUID:d79cdf23c9a884a4aae6dfb9b7e1570c"
+        "GUID:d79cdf23c9a884a4aae6dfb9b7e1570c",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
